4_service/kubia-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia
spec:
  ports:
  - port: 80            # The port this service will be available on
    targetPort: 8080    # The container port the service will forward to
  selector:
    app: kubia          # All pods with the app=kubia label will be part of this service.
